# neverupdate

./: .gitignore  .prettierrc.cjs  Cargo.toml  Jenkinsfile  README.md  eslint-partial.config.mjs  package.json  tsconfig-partial.json
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: command.rs  daemon_service.rs  error.rs  extreme.rs  history.rs  lib.rs  model.rs  pathing.rs  state.rs  system_check.rs  ti_service.rs
core/src/guards/: extreme_guard.rs  fallback_guard.rs  hosts_firewall_guard.rs  mod.rs  policy_guard.rs  service_guard.rs  task_guard.rs
daemon/: Cargo.toml
daemon/src/: main.rs  service_host.rs
docs/: requirement-and-design copy.md  technical-reference.md
panel/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
panel/src/: App.scss  App.tsx  index.scss  main.tsx  types.ts
panel/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
panel/src-tauri/capabilities/: default.json
panel/src-tauri/src/: lib.rs  main.rs
panel/src/bridge/: index.ts
panel/src/components/AdditionalFeatures/: index.scss  index.tsx
panel/src/components/DaemonControl/: index.scss  index.tsx
panel/src/components/DaemonPanel/: index.scss  index.tsx
panel/src/components/Diagnostics/: index.scss  index.tsx
panel/src/components/GuardMatrix/: index.scss  index.tsx
panel/src/components/GuardPointList/: index.scss  index.tsx
panel/src/components/HistoryList/: index.scss  index.tsx
panel/src/content/: principles.ts
panel/src/store/: index.ts
panel/src/styles/: colors.scss
public-docs/: conventions.md
(+14 files in other folders)
