[package]
name = "nu_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nu_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
is_elevated = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
winreg = "0.52"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Security",
] }
