[package]
name = "panel"
version = "0.1.0"
edition = "2021"

[dependencies]
nu_core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "~2.9.5", features = [] }
tauri-plugin-dialog = "~2.4.2"
tauri-plugin-process = "~2.3.1"
tauri-plugin-shell = "~2.3.3"
tauri-plugin-single-instance = "~2.3.7"
tauri-plugin-updater = "~2.9.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "~2.9.0"
